fixed hash being too big on some browsers

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -61,7 +61,6 @@ footer p {
 .user-label-hash {
     padding-right: 0px;
     margin-right: 0px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: bolder;
 }
 .user-label {
